<resources>
    <string name="app_name">ChatErrJi</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="logout">Logout</string>
    <string name="your_email">Your Email</string>
    <string name="login">LOGIN</string>
    <string name="welcome_to_chaterji">Welcome to ChatErrJi</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="forgot_password">forgot password?</string>
    <string name="create_a_new_account">Create a new account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_user_status">Hi there! I\'m using ChatErrJi !</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
</resources>
