<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/images" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/display_name" />

    <TextView
        android:id="@+id/settings_user_statusTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/settings_user_status" />

    <Button
        android:id="@+id/settings_change_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:elevation="3dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/change_image" />

    <Button
        android:id="@+id/settings_change_status_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="3dp"
        android:textColor="#FFFFFF"
        android:text="@string/change_status" />

</RelativeLayout>